// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`BouncingDots > snapshots > matches props snapshot 1`] = `
<div>
  <div
    class="sc-bdDsCe iCuTFz aje-bouncing-dots custom-class is-small"
    style="color: red;"
  >
    <span
      class="sc-gtcBCx kHHBzz aje-bouncing-dots__dot"
    />
    <span
      class="sc-gtcBCx kTkLDs aje-bouncing-dots__dot"
    />
    <span
      class="sc-gtcBCx blzoIu aje-bouncing-dots__dot"
    />
    <span
      class="sc-gtcBCx izOuBl aje-bouncing-dots__dot"
    />
    <span
      class="sc-gtcBCx fvgAtJ aje-bouncing-dots__dot"
    />
  </div>
</div>
`;

exports[`BouncingDots > snapshots > matches snapshot 1`] = `
<DocumentFragment>
  <div
    class="sc-bdDsCe eyNVMz aje-bouncing-dots is-medium"
  >
    <span
      class="sc-gtcBCx kHHBzz aje-bouncing-dots__dot"
    />
    <span
      class="sc-gtcBCx kTkLDs aje-bouncing-dots__dot"
    />
    <span
      class="sc-gtcBCx blzoIu aje-bouncing-dots__dot"
    />
  </div>
</DocumentFragment>
`;
